Uploaded and Saved Photos

--- a/app/src/main/res/layout/comments_layout.xml
+++ b/app/src/main/res/layout/comments_layout.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="user name"
+            android:layout_marginLeft="3dp"
             android:textSize="16sp"
             android:textStyle="bold"
             />
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="comment"
+            android:layout_marginLeft="3dp"
             android:textSize="16sp"
             android:textStyle="bold"
             />
